# kharosthi

./: README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  main.yml
kharosthi/: __init__.py  number.py  numbers.py
tests/: test_kharosthi_numbers.py
