[tool.poetry]
name = "kharosthi"
version = "0.1.0"
description = "A module to represent kharosthi numbers"
authors = ["Ulrik Johansson <ulrik@ulrik.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
mypy = "^0.790"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
