[tool.poetry]
name = "kharosthi.numbers"
version = "0.1.2"
description = "A module to represent kharosthi numbers"
authors = ["Ulrik Johansson <ulrik@ulrik.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ulrikjohansson/kharosthi_numbers"
packages = [
    { include = "kharosthi" }
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
mypy = "^0.790"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
